--- a/autor.html
+++ b/autor.html
@@ -21,7 +21,7 @@
         <a href="contact.html" class="menu margin-left-10px"> Kontakt</a>
         <a href="autor.html" class="menu margin-left-10px"> O autoru</a>
       </nav>
-      <a href="#"><div id="term" class="button-hover">Zakazite termin</div></a>
+      <a href="contact.html"><div id="term" class="button-hover">Zakazite termin</div></a>
     </header>
 
 
