--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
 
         <div class="service-item">
-            <div class="icon-placeholder Polish"></div>
+            <div class="icon-placeholder polish"></div>
             <h3>Poliranje</h3>
             <p>Poliranjem laka uklanjamo sitne ogrebotine, hologramske tragove i oksidaciju, čime se obnavlja originalna dubina boje i postiže savršena, glatka površina visokog sjaja.</p>
         </div>
